tests/files/type_checker_tests/should_pass/232.cmdr
//Test that functions type check
fn add(a:int, b): int { 
    return a + b;
}
add(2, 3);
x = add(2, 3.4);
